--- a/index.tmpl
+++ b/index.tmpl
@@ -13,81 +13,7 @@
     <meta name="fragment" content="!">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.png" />
     <meta charset="UTF-8">
-
-<%
-    var task = grunt.config('currentTask').name;
-    grunt.log.writeln('Building single index.html of type: ' + task);
-
-    var ownJsFileFull = grunt.config('concat').dev.dest;
-    var ownJsFileMin = grunt.config('uglify').dist.dest;
-
-    var minifiedJsFiles = grunt.config('internalJsFiles');
-    var minifiedCssFiles = grunt.config('internalCssFiles');
-
-    function print_script_ref(ref) {
-        print('<script type="text/javascript" src="//' + ref + '"></script>\n');
-    }
-    function print_style_ref(ref) {
-        print('<link rel="stylesheet" href="//' + ref + '" type="text/css"></link>\n');
-    }
-    function print_script_inline(name, content) {
-        if (task === 'debug')
-            print('<!-- START ' + name + ' -->\n');
-        print('<script type="text/javascript">');
-        print(content);
-        print('</script>\n');
-        if (task === 'debug')
-            print('<!-- END ' + name + ' -->\n');
-    }
-    function print_style_inline(name, content) {
-        if (task === 'debug')
-            print('<!-- START ' + name + ' -->\n');
-        print('<style id="style:' + name + '">');
-        print(content);
-        print('</style>');
-        if (task === 'debug')
-            print('<!-- END ' + name + ' -->\n');
-    }
-
-    if (task === 'debug') {
-        print('<script type="text/javascript">window.MDwikiEnableDebug = true;</script>');
-    }
-
-    if (task === 'release') {
-        // INLINE SCRIPTS AND CSS
-        for(var i = 0, len = cssFiles.length; i < len; i++) {
-            var fileContent = grunt.file.read(cssFiles[i]);
-            print_style_inline(cssFiles[i], fileContent);
-        }
-        for(var i = 0, len = jsFiles.length; i < len; i++) {
-            var fileContent = grunt.file.read(jsFiles[i]);
-            print_script_inline(jsFiles[i], fileContent);
-        }
-    } else if (task === 'debug') {
-        // INLINE SCRIPTS AND CSS
-        for(var i = 0, len = unminifiedCssFiles.length; i < len; i++) {
-            var fileContent = grunt.file.read(unminifiedCssFiles[i]);
-            print_style_inline(unminifiedCssFiles[i], fileContent);
-        }
-        for(var i = 0, len = unminifiedJsFiles.length; i < len; i++) {
-            var fileContent = grunt.file.read(unminifiedJsFiles[i]);
-            print_script_inline(unminifiedJsFiles[i], fileContent);
-        }
-    }
-
-
-    // OUR OWN CODE
-    var fileContent = '';
-    if (task === 'debug') {
-        fileContent = grunt.file.read(ownJsFileFull);
-        print_script_inline(ownJsFileFull, fileContent);
-    } else if (task === 'release') {
-        fileContent = grunt.file.read(ownJsFileMin);
-        print_script_inline(ownJsFileMin, fileContent);
-    }
-
-
-%>
+    <script type="text/javascript" src="bundle.js"></script>
 </head>
 <body>
 
