moving style files to main src directory

--- a/js/main.scss
+++ b/js/main.scss
@@ -1,3 +1,5 @@
 @import "custom";
+@import "colorbox";
+@import "mdwiki";
 @import "~bootstrap/scss/bootstrap";
 @import "~prismjs/themes/prism-okaidia";
